hphp/hack/test/implemented_by_hhi/implemented_by_wrong_param_count.hhi.exp
ERROR: File "implemented_by_wrong_param_count.hhi", line 5, characters 21-40:
The method must be implemented by a function with a compatible type. (Typing[4041])
  File "implemented_by_wrong_param_count.hhi", line 2, characters 10-26:
  Too many mandatory arguments (expected 2 but got 3)
  File "implemented_by_wrong_param_count.hhi", line 6, characters 19-26:
  Because of this definition
